components/app-configs/notebook-nvidia-nemo/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nemo-notebook
  labels:
    deployment: nemo-notebook
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  port:
    targetPort: 8888
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: nemo-notebook
    weight: 100
  wildcardPolicy: None
